# FoodOrderingSystem

./: README.md
Food Ordering System/: CMakeLists.txt  README.md
Food Ordering System/include/: Admin.h  Customer.h  DatabaseManager.h  FileManager.h  FoodService.h  MainWindow.h  MenuItem.h  Order.h  OrderItem.h  Person.h
Food Ordering System/resources/: resources.qrc
Food Ordering System/resources/images/: README.txt
Food Ordering System/src/: Admin.cpp  Customer.cpp  DatabaseManager.cpp  FileManager.cpp  FoodService.cpp  MainWindow.cpp  MenuItem.cpp  Order.cpp  OrderItem.cpp  Person.cpp  main.cpp
